style: nav__icon--open

--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -140,3 +140,9 @@
     justify-content: space-between;
     align-items: center;
 }
+
+/* .d-flex-between-start {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+} */
