--- a/template/css/common.css
+++ b/template/css/common.css
@@ -308,13 +308,16 @@ body {
 
 .nav__sublist {
     position: absolute;
-    /* width: 90%; */
-    min-width: 268px;
+    width: 100%;
+    left: 0;
+    /* min-width: 268px; */
     margin-top: 1rem;
-    /* padding: 8px; */
+    padding-left: 1.5rem;
     background-color: var(--color-secondary);
     /* box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16); */
     z-index: 100;
+
+    /* outline: 1px solid red; */
 
     @media (min-width: 1024px) {
         /* width: 268px; */
@@ -329,11 +332,24 @@ body {
     }
 }
 
+.nav__sublist--nested {
+    padding-left: 1rem;
+}
+
 .nav__item--child {
     padding: 0.5rem 0;
     color: var(--color-font);
 }
 
 .nav__item--special {
+    padding: 0.5rem 0;
     color: var(--color-accent);
+}
+
+/* .nav__sublist--child {
+    width: 70%;
+} */
+
+.nav__icon--open {
+    margin-right: clamp(5%, calc((100vw - 360px) * 1.5), 70%);
 }
