--- a/template/css/common.css
+++ b/template/css/common.css
@@ -251,7 +251,9 @@ body {
 }
 
 .nav__item {
-    padding: 1rem calc(var(--bs-gutter-x) * 0.5);
+    position: relative;
+    /* padding: 1rem calc(var(--bs-gutter-x) * 0.5); */
+    padding: 1rem 0;
     transition: background-color var(--transition-03);
 
     @media (min-width: 1024px) {
@@ -286,8 +288,14 @@ body {
     position: relative;
     display: flex;
     align-items: center;
+    /* padding-left: 1rem; */
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
     gap: 0.5rem;
     font-weight: 500;
+
+    @media (min-width: 1024px) {
+        padding-left: 0;
+    }
 }
 
 .nav__link::after {
@@ -307,49 +315,78 @@ body {
 }
 
 .nav__sublist {
-    position: absolute;
     width: 100%;
-    left: 0;
-    /* min-width: 268px; */
     margin-top: 1rem;
     padding-left: 1.5rem;
     background-color: var(--color-secondary);
-    /* box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16); */
-    z-index: 100;
 
     /* outline: 1px solid red; */
 
     @media (min-width: 1024px) {
-        /* width: 268px; */
+        position: absolute;
+        min-width: 268px;
+        left: 0;
         margin-top: 0.5rem;
-        margin-left: -0.5rem;
+        margin-left: 0.15rem;
         box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16);
+        z-index: 100;
     }
 
     @media (min-width: 1440px) {
         margin-top: 1rem;
-        margin-left: -1.2rem;
+        /* margin-left: 1.2rem; */
     }
 }
 
-.nav__sublist--nested {
-    padding-left: 1rem;
-}
-
 .nav__item--child {
-    padding: 0.5rem 0;
+    padding: 0.9rem 0 0;
     color: var(--color-font);
 }
 
 .nav__item--special {
-    padding: 0.5rem 0;
+    padding: 1rem 0;
     color: var(--color-accent);
 }
 
-/* .nav__sublist--child {
-    width: 70%;
-} */
-
 .nav__icon--open {
-    margin-right: clamp(5%, calc((100vw - 360px) * 1.5), 70%);
+    /* margin-right: clamp(5%, calc((100vw - 300px) * 1.2), 70%); */
+    margin-right: 1.5rem;
+    /* margin-right: calc(var(--bs-gutter-x) * 0.5); */
+}
+
+.nav__sublist--nested {
+    padding-left: 1rem;
+    background-color: var(--color-secondary);
+
+    /* outline: 1px solid green; */
+
+    @media (min-width: 1024px) {
+        position: absolute;
+        flex-wrap: wrap;
+        align-content: space-between;
+        width: 744px;
+        height: 242px;
+        top: 0;
+        left: 244px;
+        padding-bottom: 1rem;
+        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16);
+        z-index: 100;
+    }
+}
+
+.nav__sublist--nested .nav__item--child {
+    padding: 0.75rem 2rem 0 0;
+}
+
+.nested-img {
+    display: none;
+    width: 194px;
+    height: 168px;
+    object-fit: cover;
+    object-position: center;
+    margin: auto 0;
+
+    @media (min-width: 1024px) {
+        display: block;
+    }
 }
