--- a/template/css/common.css
+++ b/template/css/common.css
@@ -287,6 +287,7 @@ body {
 
 .nav__item--parent:hover > .hover-accent,
 .nav__item--parent.active > .hover-accent,
+.nav__item--child:hover > .hover-accent,
 .nav__item--child.active > .nav__link--child {
     color: var(--color-accent);
 }
@@ -308,7 +309,7 @@ body {
 .nav__link::after {
     content: "";
     display: block;
-    margin-left: 0.3rem;
+    margin-left: 1rem;
     margin-bottom: 0.5rem;
     width: 9px;
     height: 9px;
