--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -51,23 +51,20 @@
 .gap-2 {
     gap: 0.5rem;
 }
-
-/* .gap-4 {
-    gap: 1.5rem;
-} */
+.gap-3 {
+    gap: 1rem;
+}
+.gap-4 {
+    gap: 1.25rem;
+}
 
 /* .gap-1 {
     gap: 0.25rem;
 } */
-.gap-2 {
-    gap: 0.5rem;
-}
-/* .gap-3 {
-    gap: 1rem;
-} */
-/* .gap-5 {
+
+.gap-5 {
     gap: 2rem;
-} */
+}
 /* .gap-6 {
     gap: 2.5rem;
 } */
@@ -122,11 +119,31 @@
     }
 }
 
+.title-tertiary {
+    font-family: var(--font-primary);
+    font-weight: 700;
+    font-size: var(--font-size-subtitle);
+    line-height: var(--line-height);
+    text-align: center;
+
+    @media (min-width: 1024px) {
+        font-size: var(--font-size-title);
+    }
+}
+
 .text-body {
     font-family: var(--font-primary);
     font-size: var(--font-size-base);
     color: var(--color-text-primary);
     line-height: var(--line-height);
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
+.color-secondary-font {
+    color: var(--color-secondary-font);
 }
 
 .d-flex-start-center {
@@ -139,6 +156,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.w-100 {
+    width: 100%;
 }
 
 /* .d-flex-between-start {
