--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -158,9 +158,19 @@
     align-items: center;
 }
 
+.d-flex-center-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .w-100 {
     width: 100%;
 }
+
+/* .w-50 {
+    width: 50%;
+} */
 
 /* .d-flex-between-start {
     display: flex;
