--- a/template/css/common.css
+++ b/template/css/common.css
@@ -113,6 +113,11 @@
     padding: 0;
 }
 
+a,
+button {
+    -webkit-tap-highlight-color: transparent;
+}
+
 body {
     min-width: 360px;
     min-height: 100vh;
