fix: prohibit body scrolling in mobil-panel

--- a/template/css/common.css
+++ b/template/css/common.css
@@ -128,6 +128,12 @@ body {
     color: var(--color-font);
 }
 
+body.lock-scroll {
+    overflow: hidden;
+    height: 100%;
+    touch-action: none;
+}
+
 .header {
     margin-bottom: 2.5rem;
 
@@ -295,8 +301,11 @@ body {
 .nav__item--parent:hover > .hover-accent,
 .nav__item--parent.active > .hover-accent,
 .nav__item--child:hover > .hover-accent,
-.nav__item--child.active > .nav__link--child {
+.nav__item--child.active > .nav__link--child,
+.hover-accent:hover use,
+.hover-accent.active use {
     color: var(--color-accent);
+    transition: color 0.2s ease;
 }
 
 .nav__link {
@@ -305,7 +314,7 @@ body {
     align-items: center;
     /* padding-left: 1rem; */
     padding-left: calc(var(--bs-gutter-x) * 0.5);
-    gap: 0.5rem;
+    gap: 0.25rem;
     font-weight: 500;
 
     @media (min-width: 1024px) {
@@ -313,37 +322,30 @@ body {
     }
 }
 
-.nav__link::after {
-    content: "";
-    display: block;
-    margin-left: 1rem;
-    margin-bottom: 0.5rem;
-    width: 9px;
-    height: 9px;
-    border-right: 1px solid currentColor;
-    border-bottom: 1px solid currentColor;
-    transform: rotate(45deg);
-    transition: border-color var(--transition-03);
+.first-level-icon {
+    position: relative;
+    display: inline-block;
+    margin-left: 1.5rem;
+    color: var(--color-font);
+    rotate: 90deg;
+    transform: translateX(-0.1rem);
+    transition: rotate 0.3s ease, transform 0.3s ease;
 
     @media (min-width: 1024px) {
         margin-left: 0;
+        color: var(--color-secondary);
     }
 }
 
-.nav__link.active::after {
-    transform: rotate(-135deg);
-    margin-bottom: 0;
-}
-
-.nav__link--contacts::after {
-    display: none;
+.first-level-icon.active {
+    rotate: -90deg;
 }
 
 .nav__sublist {
     display: none;
     width: 100%;
     margin-top: 1rem;
-    padding-left: 1.5rem;
+    padding-left: 1.25rem;
     background-color: var(--color-secondary);
 
     @media (min-width: 1024px) {
@@ -403,6 +405,7 @@ body {
 
 .nav__icon--open {
     margin-right: var(--margin-right); /* динамический 6-47rem */
+    color: var(--color-font);
 
     @media (min-width: 1024px) {
         margin-right: 1rem;
