--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -48,6 +48,9 @@
     row-gap: 1.1rem;
 }
 
+/* .gap-1 {
+    gap: 0.25rem;
+} */
 .gap-2 {
     gap: 0.5rem;
 }
@@ -57,17 +60,13 @@
 .gap-4 {
     gap: 1.25rem;
 }
-
-/* .gap-1 {
-    gap: 0.25rem;
-} */
-
 .gap-5 {
+    gap: 1.5rem;
+}
+.gap-6 {
     gap: 2rem;
 }
-/* .gap-6 {
-    gap: 2.5rem;
-} */
+
 /* .gap-7 {
     gap: 3rem;
 } */
