--- a/template/css/common.css
+++ b/template/css/common.css
@@ -572,7 +572,7 @@ body.lock-scroll {
     }
 }
 
-.about__title-primary::after {
+/* .about__title-primary::after {
     position: absolute;
     content: "";
     top: 42px;
@@ -591,7 +591,7 @@ body.lock-scroll {
         top: 60px;
         left: 344px;
     }
-}
+} */
 
 .text-about {
     @media (min-width: 768px) {
@@ -628,10 +628,25 @@ body.lock-scroll {
     color: var(--color-accent);
 }
 
+.awards__inner {
+    gap: 1.75rem;
+
+    @media (min-width: 768px) {
+        column-gap: 1rem;
+        row-gap: 2rem;
+    }
+}
+
 .award-item {
     @media (min-width: 768px) {
         width: 48%;
     }
+}
+
+.award-item__img {
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
 }
 
 .award-subtitle {
@@ -640,9 +655,4 @@ body.lock-scroll {
     font-size: var(--font-size-subtitle);
     font-weight: 700;
     color: var(--color-accent);
-    padding-top: 0.5rem;
-
-    @media (min-width: 1024px) {
-        padding-top: 1.5rem;
-    }
 }
