--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -176,16 +176,16 @@
     align-items: center;
 }
 
+.d-flex-between-start {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .w-100 {
     width: 100%;
 }
 
 /* .w-50 {
     width: 50%;
-} */
-
-/* .d-flex-between-start {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
 } */
