--- a/template/css/common.css
+++ b/template/css/common.css
@@ -77,6 +77,7 @@
     --color-bg: #f5f5f5;
     --color-accent: #d13a1f;
     --color-font: #141414;
+    --color-font-04: rgba(20, 20, 20, 0.4);
     --color-secondary-font: #666;
     --color-royal-peacock: #27a6e5;
     --color-forest-maid: #48c95f;
@@ -639,10 +640,10 @@ body.lock-scroll {
 
 /* Portfolio */
 .portfolio__inner {
-    gap: 1.25rem;
+    gap: 2rem;
 
     @media (min-width: 1024px) {
-        gap: 2.5rem;
+        gap: 3rem;
     }
 }
 
