--- a/template/css/ui.css
+++ b/template/css/ui.css
@@ -57,6 +57,51 @@
     transform: scale(0.98);
 }
 
+.btn-primary-tab {
+    padding: 12px 18px;
+    pointer-events: none;
+}
+
+.btn-current {
+    background-color: var(--color-secondary);
+    color: var(--color-accent);
+}
+
+.btn-primary-tab:hover {
+    background-color: var(--color-accent);
+    color: var(--color-secondary);
+}
+
+.btn-primary-tab.btn-tab {
+    background-color: var(--color-secondary);
+    color: var(--color-font-04);
+}
+
+.btn-tab {
+    background-color: var(--color-secondary);
+    color: var(--color-font-04);
+    padding: 12px 18px;
+}
+
+.btn-tab:hover,
+.btn-tab:active {
+    background-color: var(--color-accent);
+    color: var(--color-secondary);
+}
+
+.btn-primary-tab,
+.btn-tab {
+    @media (min-width: 1024px) {
+        font-size: 1.25rem;
+        padding: 13px 24px;
+    }
+}
+
+/* .btn-active {
+    background-color: var(--color-accent);
+    color: var(--color-secondary);
+} */
+
 .btn-icon {
     padding: 0;
     background-color: var(--color-accent);
