style: add no-tap-highlight

--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -95,6 +95,10 @@
     user-select: none;
 }
 
+.no-tap-highlight {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .pos-relative {
     position: relative;
 }
