--- a/template/css/common.css
+++ b/template/css/common.css
@@ -76,6 +76,7 @@
     --color-bg-dark: #282828;
     --color-bg: #f5f5f5;
     --color-accent: #d13a1f;
+    --color-accent-08: rgba(209, 58, 31, 0.8);
     --color-font: #141414;
     --color-font-04: rgba(20, 20, 20, 0.4);
     --color-secondary-font: #666;
@@ -330,7 +331,7 @@ body.lock-scroll {
     color: var(--color-font);
     rotate: 90deg;
     transform: translateX(-0.1rem);
-    transition: rotate 0.3s ease, transform 0.3s ease;
+    transition: rotate var(--transition-03), transform var(--transition-03);
 
     @media (min-width: 1024px) {
         margin-left: 0;
@@ -504,6 +505,7 @@ body.lock-scroll {
 /* About */
 .about__top {
     flex-direction: column;
+    padding-top: 2.5rem;
     margin-bottom: 2.5rem;
     gap: 1.75rem;
 
@@ -512,8 +514,13 @@ body.lock-scroll {
     }
 
     @media (min-width: 768px) {
+        padding-top: 0.5rem;
         margin-bottom: 4rem;
         gap: 2.5rem;
+    }
+
+    @media (min-width: 1024px) {
+        padding-top: 2.5rem;
     }
 
     @media (min-width: 1440px) {
@@ -649,6 +656,7 @@ body.lock-scroll {
 
 .portfolio__text-body {
     text-align: center;
+
     @media (min-width: 1024px) {
         font-size: 20px;
     }
@@ -673,5 +681,126 @@ body.lock-scroll {
     opacity: 1;
     visibility: visible;
     transition: opacity 0.4s ease-in-out;
+}
+
+.portfolio__block {
+    gap: 1rem;
+}
+
+.portfolio-tabs__cards {
+    overflow: hidden;
+    column-count: 1;
+    column-gap: 1.25rem;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 1rem;
+}
+
+.portfolio-card,
+.portfolio-card--tall {
+    position: relative;
+    margin-bottom: 1rem;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+
+    /* outline: 1px solid red; */
+}
+
+.portfolio-card__img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio-card__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
+.card-hover {
+    position: absolute;
+    inset: 0;
+    padding: 1rem;
+    background: var(--color-accent-08);
+    color: var(--color-bg);
+    gap: 0.25rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity var(--transition-03);
+}
+
+.portfolio-card:hover .card-hover,
+.portfolio-card--tall:hover .card-hover {
+    opacity: 1;
+    visibility: visible;
+}
+
+.card-hover::before {
+    content: "";
+    position: absolute;
+    inset: 0.5rem;
+    border: 1px solid var(--color-bg);
+    pointer-events: none;
+}
+
+.hover-title {
+    font-weight: 600;
+}
+
+@media (min-width: 768px) {
+    .portfolio-tabs__cards {
+        column-count: 3;
+        column-gap: 1.125rem;
+    }
+
+    .portfolio-card,
+    .portfolio-card--tall {
+        margin-bottom: 1.125rem;
+    }
+
+    .portfolio-card--tall {
+        aspect-ratio: 2 / 3;
+    }
+
+    .card-hover {
+        padding: 2rem;
+    }
+
+    .card-hover::before {
+        inset: 1rem;
+    }
+
+    .hover-title {
+        font-size: 24px;
+        line-height: 150%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .portfolio__block {
+        gap: 1.5rem;
+    }
+
+    .portfolio-tabs__cards {
+        column-gap: 1.5rem;
+    }
+
+    .portfolio-card,
+    .portfolio-card--tall {
+        margin-bottom: 1.5rem;
+    }
+}
+
+@media (min-width: 1440px) {
+    .portfolio-tabs__cards {
+        column-gap: 1.75rem;
+    }
+
+    .portfolio-card,
+    .portfolio-card--tall {
+        margin-bottom: 1.75rem;
+    }
 }
 /* Portfolio END*/
