--- a/template/css/common.css
+++ b/template/css/common.css
@@ -691,10 +691,16 @@ body.lock-scroll {
     overflow: hidden;
     column-count: 1;
     column-gap: 1.25rem;
-    max-width: 1280px;
+    /* max-width: 100%;
     margin-left: auto;
-    margin-right: auto;
-    padding: 0 1rem;
+    margin-right: auto; */
+}
+
+.portfolio-tabs__cards.layout--narrow .portfolio-card,
+.portfolio-tabs__cards.layout--narrow .portfolio-card--tall {
+    max-width: 380px;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .portfolio-card,
@@ -703,8 +709,6 @@ body.lock-scroll {
     margin-bottom: 1rem;
     aspect-ratio: 1 / 1;
     overflow: hidden;
-
-    /* outline: 1px solid red; */
 }
 
 .portfolio-card__img {
@@ -726,15 +730,18 @@ body.lock-scroll {
     background: var(--color-accent-08);
     color: var(--color-bg);
     gap: 0.25rem;
+    transform: scale(1.1);
     opacity: 0;
     visibility: hidden;
-    transition: opacity var(--transition-03);
+    transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
+    transform-origin: center;
 }
 
 .portfolio-card:hover .card-hover,
 .portfolio-card--tall:hover .card-hover {
     opacity: 1;
     visibility: visible;
+    transform: scale(1);
 }
 
 .card-hover::before {
@@ -762,6 +769,10 @@ body.lock-scroll {
 
     .portfolio-card--tall {
         aspect-ratio: 2 / 3;
+    }
+
+    .disable-tall .portfolio-card--tall {
+        aspect-ratio: 1 / 1;
     }
 
     .card-hover {
