--- a/template/css/common.css
+++ b/template/css/common.css
@@ -120,6 +120,11 @@ button {
     -webkit-tap-highlight-color: transparent;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 body {
     min-width: 360px;
     min-height: 100vh;
@@ -818,3 +823,36 @@ body.lock-scroll {
     }
 }
 /* Portfolio END*/
+
+/* Tariffs */
+.tariffs__title {
+    width: 90%;
+    /* margin-bottom: 2.5rem; */
+
+    @media (min-width: 480px) {
+        /* margin-bottom: 0.375rem; */
+    }
+
+    @media (min-width: 1024px) {
+        /* margin-bottom: 3.125rem; */
+    }
+}
+
+.tariff-card {
+    padding-top: 3rem;
+
+    @media (min-width: 768px) {
+        padding-top: 3.5rem;
+    }
+
+    /* @media (min-width: 1024px) {
+        width: 48%;
+    } */
+}
+
+.tariff-card__price {
+    width: auto;
+    flex-shrink: 0;
+    color: var(--color-accent);
+}
+/* Tariffs END*/
