--- a/template/css/common.css
+++ b/template/css/common.css
@@ -123,6 +123,7 @@ button {
 html,
 body {
     scroll-behavior: smooth;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -133,6 +134,7 @@ body {
     font-size: var(--font-size-base);
     line-height: var(--line-height);
     color: var(--color-font);
+    overflow-x: hidden;
 }
 
 body.lock-scroll {
@@ -824,18 +826,24 @@ body.lock-scroll {
 }
 /* Portfolio END*/
 
+/* Spacer */
+.spacer-fade-text,
+.spacer-fade-svg {
+    color: var(--color-font);
+    fill: var(--color-font);
+    /* transition: color var(--transition-03); */
+}
+
+body.spacer-invert-active .spacer-fade-text,
+body.spacer-invert-active .spacer-fade-svg {
+    color: var(--color-secondary);
+    fill: var(--color-secondary);
+}
+/* Spacer END*/
+
 /* Tariffs */
 .tariffs__title {
     width: 90%;
-    /* margin-bottom: 2.5rem; */
-
-    @media (min-width: 480px) {
-        /* margin-bottom: 0.375rem; */
-    }
-
-    @media (min-width: 1024px) {
-        /* margin-bottom: 3.125rem; */
-    }
 }
 
 .tariff-card {
@@ -844,15 +852,43 @@ body.lock-scroll {
     @media (min-width: 768px) {
         padding-top: 3.5rem;
     }
-
-    /* @media (min-width: 1024px) {
-        width: 48%;
-    } */
 }
 
 .tariff-card__price {
     width: auto;
     flex-shrink: 0;
     color: var(--color-accent);
+}
+
+.spacer-inner {
+    position: relative;
+    /* padding: 7rem 0 7rem; */
+}
+
+.spacer-inner__grow-circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 68px;
+    height: 68px;
+    background-color: var(--color-primary);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    z-index: -1;
+    pointer-events: none;
+}
+
+.spacer-inner__icon {
+    width: 68px;
+    height: 68px;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    margin: 0 auto;
+}
+
+.icon-spacer-arrow {
+    width: 24px;
+    height: 24px;
+    rotate: 90deg;
 }
 /* Tariffs END*/
