--- a/template/css/common.css
+++ b/template/css/common.css
@@ -892,3 +892,45 @@ body.lock-scroll {
     color: var(--color-accent);
 }
 /* Tariffs END*/
+
+/* Offices */
+.offices-clients__wrap {
+    padding-top: 1.5rem;
+
+    @media (min-width: 768px) {
+        padding-top: 2rem;
+    }
+}
+
+.offices__inner {
+    flex-direction: column;
+
+    @media (min-width: 1440px) {
+        flex-direction: row;
+        align-items: center;
+    }
+}
+
+/* .offices-info {
+    flex-shrink: 0;
+    width: 100%;
+} */
+
+.offices__text-body {
+    color: var(--color-primary);
+
+    @media (min-width: 1024px) {
+        font-size: 20px;
+    }
+}
+
+.offices__map {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+
+    @media (min-width: 1440px) {
+        width: 60%;
+    }
+}
+/* Offices END*/
