--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -93,6 +93,14 @@
     margin-bottom: 2rem;
 }
 
+.gap-20-40 {
+    gap: 1.25rem;
+
+    @media (min-width: 1024px) {
+        gap: 2.5rem;
+    }
+}
+
 .transform-active:active {
     transform: scale(0.95);
 }
