--- a/template/css/common.css
+++ b/template/css/common.css
@@ -828,7 +828,6 @@ body.lock-scroll {
 /* Spacer */
 .spacer-inner {
     position: relative;
-    /* padding: 7rem 0 7rem; */
 }
 
 .spacer-inner__grow-circle {
@@ -843,6 +842,7 @@ body.lock-scroll {
     z-index: -1;
     pointer-events: none;
     transition: transform var(--transition-03);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .spacer-inner__icon {
@@ -921,7 +921,6 @@ body.lock-scroll {
     /* border: 1px solid red; */
     width: 100%;
     height: 1px;
-    margin-top: 10px;
 
     @media (min-width: 600px) {
         margin-top: 30px;
@@ -936,7 +935,7 @@ body.lock-scroll {
     }
 
     @media (min-width: 1024px) {
-        margin-top: 160px;
+        margin-top: 120px;
     }
 
     @media (min-width: 1280px) {
