--- a/template/css/slider.css
+++ b/template/css/slider.css
@@ -134,33 +134,30 @@
 .swiper-button-prev,
 .swiper-button-next {
     position: absolute;
-    top: 2rem;
     z-index: 10;
-    color: var(--color-slider-control);
     width: 2rem;
     height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: none;
     border: none;
     cursor: pointer;
-    transition: color var(--transition-03);
 
     @media (min-width: 768px) {
-        top: 3.3rem;
+        /* top: 3.3rem; */
     }
 
     @media (min-width: 1440px) {
-        top: 3.65rem;
+        /* top: 3.65rem; */
     }
 }
 
-.swiper-button-prev {
+/* .swiper-button-prev */
+.slider-top-prev {
+    top: 2rem;
     left: 1.875rem;
-    transform: rotate(180deg);
+    /* transform: rotate(180deg); */
 
     @media (min-width: 768px) {
+        top: 3.3rem;
         left: 1.65rem;
     }
 
@@ -169,14 +166,18 @@
     }
 
     @media (min-width: 1440px) {
+        top: 3.65rem;
         left: 1rem;
     }
 }
 
-.swiper-button-next {
+/* .swiper-button-next */
+.slider-top-next {
+    top: 2rem;
     left: 7.125rem;
 
     @media (min-width: 768px) {
+        top: 3.3rem;
         left: 6.9rem;
     }
 
@@ -185,13 +186,9 @@
     }
 
     @media (min-width: 1440px) {
+        top: 3.65rem;
         left: 5rem;
     }
-}
-
-.swiper-button-prev:hover,
-.swiper-button-next:hover {
-    color: var(--color-accent);
 }
 
 .swiper-button-prev .icon,
@@ -199,6 +196,18 @@
     width: 2rem;
     height: 2rem;
     color: var(--color-slider-control);
+    transition: color var(--transition-03);
+}
+
+.swiper-button-prev .icon {
+    transform: rotate(180deg);
+}
+
+@media (hover: hover) {
+    .swiper-button-prev:hover .icon,
+    .swiper-button-next:hover .icon {
+        color: var(--color-accent);
+    }
 }
 
 .swiper-pagination-bullet {
@@ -267,3 +276,56 @@
     display: none;
 }
 /* Swiper End */
+
+/* Clients-slider Swiper*/
+.arrow-prev,
+.arrow-next {
+    left: auto;
+    right: auto;
+}
+
+.arrow-prev {
+    right: 3.25rem;
+
+    @media (min-width: 480px) {
+        right: 4rem;
+    }
+}
+
+.arrow-next {
+    right: 0;
+}
+
+/* .swiper-button-prev {
+    left: 1.875rem;
+    transform: rotate(180deg);
+
+    @media (min-width: 768px) {
+        left: 1.65rem;
+    }
+
+    @media (min-width: 1024px) {
+        left: 1.8rem;
+    }
+
+    @media (min-width: 1440px) {
+        left: 1rem;
+    }
+}
+
+.swiper-button-next {
+    left: 7.125rem;
+
+    @media (min-width: 768px) {
+        left: 6.9rem;
+    }
+
+    @media (min-width: 1024px) {
+        left: 7.15rem;
+    }
+
+    @media (min-width: 1440px) {
+        left: 5rem;
+    }
+} */
+/* Clients-slider Swiper END */
